--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         dataLayer.push(arguments);
       }
     </script>
-    <title>React Template</title>
+    <title>Wibu MERCH</title>
     <meta
       name="description"
       content="React Template for Education. "
